--- a/newlist.html
+++ b/newlist.html
@@ -63,6 +63,7 @@
 
                         <input type="text" class="form-control" id="new-list-item-1" placeholder="Add list item"></input>
                     </div><!--list-input-->
+                    <button class="copy-button copy-to-new" type="submit" id="save-this-list">Save this list</button>
                 </div>
             </div><!--new list container-->
 
